# MouseCore

./: CMakeLists.txt  IndirectDraw.h  LICENSE  MouseCore.c  MouseCore.h  PersistentMappedBuffer.c  PersistentMappedBuffer.h  README.md  Shader.c  Shader.h  Transform.c  Transform.h  Utility.c  Utility.h  stb_image.c
Camera/: Camera.c  Camera.h  CameraBuffer.c  CameraBuffer.h
DataStructures/: LinkedList.c  LinkedList.h
Quad/: Quad.c  Quad.h  QuadBatch.c  QuadBatch.h  QuadBatchable.c  QuadBatchable.h  QuadBufferHelpers.c  QuadBufferHelpers.h  QuadBuffers.c  QuadBuffers.h  QuadBuffersMapped.c  QuadBuffersMapped.h  QuadDrawable.c  QuadDrawable.h
Spine/: SpineBuffers.c  SpineBuffers.h  SpineMesh.c
